# tanks

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  tanks.pro  travis.yml
app/: CMakeLists.txt  gameworld.cpp  gameworld.h  main.cpp  main.qml  typeregistrator.h
common/: CMakeLists.txt
common/Common/: common.h  gameproperties.h  position.cpp  position.h
common/Controller/: gamemanager.cpp  inputcommandsdispatcher.cpp  inputcommandsdispatcher.h  inputmanager.cpp
common/Model/: bullet.cpp  bullet.h  enemytank.cpp  enemytank.h  positionableobject.cpp  positionableobject.h  tank.cpp  tank.h  tanksfield.cpp
src/app/: Bullet.qml  GameField.qml  app.pro  typeregistrator.cpp
src/common/: common.pro
src/common/Common/: common.h  position.cpp  postion.h
src/common/Controller/: gamemanager.h
src/common/Model/: bullet.cpp  tank.cpp  tank.h  tanksfield.h
src/tests/: tests.cpp  tests.pro  testsuits.cpp  testsuits.h  tst_bullet.cpp  tst_bullet.h  tst_tank.cpp  tst_tankstest.cpp  tst_tankstest.h
tanks/: Bullet.qml  GameField.qml  Player1.qml  Tank.qml  TanksField.qml  common.cpp  common.h  gamemanager.cpp  gamemanager.h  gameproperties.cpp  gameproperties.h  inputmanager.cpp  inputmanager.h  main.cpp  main.qml  position.cpp  postion.h  qml.qrc  tanks.pro
tanks/Model/: bullet.cpp  bullet.h  tank.cpp  tank.h  tanksfield.cpp  tanksfield.h
tests/: CMakeLists.txt  tests.pro  tst_bullet.cpp  tst_inputcommandsdispatcher.cpp  tst_position.cpp  tst_tank.cpp  tst_tanksfield.cpp
